tests/snapshots/run_wpt_conformance__coreml_gather_float32_1D_tensor_and_int32_2D_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gather.https.any.js",
    "gather float32 1D tensor and int32 2D indices default options",
    "coreml",
    "PASS",
)
